# fractura

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENT.md  AGENTS.md  LICENSE  README.md  Railway.toml  backend-watchdog.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json  vercel.json.bak  watchdog.sh
.github/workflows/: deploy-railway.yml
.vercel_python_packages/duckdb-1.5.2.dist-info/: RECORD
.vercel_python_packages/fastapi-0.115.0.dist-info/: RECORD
.vercel_python_packages/httpx-0.28.1.dist-info/: RECORD
.vercel_python_packages/python_dotenv-1.2.2.dist-info/: RECORD
.vercel_python_packages/uvicorn-0.32.0.dist-info/: RECORD
.vercel_python_packages/watchfiles-1.1.1.dist-info/: RECORD
.vercel_python_packages/websockets-16.0.dist-info/: RECORD
.vercel_python_packages/wrapt-2.1.2.dist-info/: RECORD
api/: index.py
backend/: .dockerignore  Dockerfile  db.py  limiter.py  main.py  models.py  requirements.txt
backend/data_backup/: fractura.db.wal
backend/loaders/: chilecompra.py  corrupcion.py
backend/routers/: alerts.py  chilecompra.py  entity.py  graph.py  health.py  seed.py
backend/sql/: init.sql
docs/: data-sources.md
docs/prd/: PRD-003-Baseline-Oficial-2026-05-15.md
frontend/: .env.production  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx  alert-card.css  alert-detail.css  alert-table.css  dashboard.css  globe-graph.css  index.css  search-input.css
frontend/src/api/: alerts.ts  client.ts  entity.ts  graph.ts
(+22 files in other folders)
