[project]
name = "fractura"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "duckdb==1.5.2",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "httpx==0.28.1",
]

[tool.vercel]
entrypoint = "api.index:app"
